# phaseportrait

./: .gitignore  404.html  LICENSE  MANIFEST.in  README.md  README_no_imgs.md  Testing File.py  index.html  mapExamples.py  mkdocs.yml  pyproject.toml  search.html  setup.py  sitemap.xml
.github/workflows/: ci.yml
.readme/: dFfunction.md  phaseportrait2d.md  slider.md  trajectory.md  trajectory3d.md
contributing/: index.html
dFfunction/: index.html
docs/: SUMMARY.md  cobweb.md  contributing.md  dFfunction.md  generate_reference_docs.py  generator.md  getting_started.md  index.md  installation.md  license.md  map.md  map1d.md  mapsandcobweb_examples.md  nullclines.md  phaseportrait2d.md  phaseportrait2d_examples.md  phaseportrait3d.md  rungekutta.md  slider.md  trajectories_examples.md  trajectory.md  trajectory2d.md  trajectory3d.md
docs/reference/legacy/: cobweb.md  map1d.md  mapsandcobweb_examples.md  nullclines.md  phaseportrait2d.md  phaseportrait2d_examples.md  phaseportrait3d.md  slider.md  streamlines_base.md  trajectories_examples.md  trajectory2d.md  trajectory3d.md
docs/reference/phaseportrait/: Cobweb.md  Map1D.md  PhasePortrait2D.md  PhasePortrait3D.md  PhasePortraitManager.md  Trajectories2D.md  Trajectories3D.md
docs/reference/phaseportrait/exceptions/: exceptions.md
docs/reference/phaseportrait/generators_base/: generator_base.md
docs/reference/phaseportrait/maps/: map.md
examples/: TrajectoryExamples.py  examples.ipynb  mapExamples.py  phaseportrait3d.py  sliderExamples.py
examples/api_examples/: phaseportrait2d_example.json
getting_started/: index.html
license/: index.html
phaseportrait/: Cobweb.py  Map1D.py  PhasePortrait2D.py  PhasePortrait2DManager.py  PhasePortrait3D.py  PhasePortraitManager.py  Trajectories2D.py  Trajectories3D.py  __init__.py  sliders.py
phaseportrait/exceptions/: __init__.py  exceptions.py
phaseportrait/generators_base/: __init__.py  generator_base.py
phaseportrait/maps/: __init__.py  cobweb.py  map.py
phaseportrait/nullclines/: __init__.py  nullclines.py
phaseportrait/sliders/: __init__.py  sliders.py
phaseportrait/streamlines/: __init__.py  size_gradient.py  streamlines_base.py  streamlines_base3d.py  velocity_color_gradient.py
phaseportrait/trajectories/: __init__.py  rungekutta.py  trajectory.py
phaseportrait/utils/: __init__.py  manager.py  utils.py
phaseportrait2d/: index.html
search/: search_index.json
slider/: index.html
trajectory/: index.html
trajectory2d/: index.html
trajectory3d/: index.html
(+9 files in other folders)
